# GuitarTrainer

./: .gitmodules  AudioSynthesizer.cpp  AudioSynthesizer.hpp  CMakeLists.txt  DelFn.cpp  DelFn.hpp  DrawableWidgetBase.cpp  DrawableWidgetBase.hpp  FretBoard.cpp  FretBoard.hpp  FretBoardWidget.cpp  FretBoardWidget.hpp  FretWidget.cpp  FretWidget.hpp  MyWidget.hpp  Note.cpp  Note.hpp  PortAudioWrapper.cpp  PortAudioWrapper.hpp  QueueBWNR.hpp  ToneMapper.cpp  ToneMapper.hpp  main.cpp
res/: resources.qrc  style.css
